--- a/index.html
+++ b/index.html
@@ -136,5 +136,7 @@
   <script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/js/v3.js"></script>
   <script src="https://cdn.staticfile.org/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/kaygb/kaygb@master/layer/layer.js"></script>
+  <!-- ads -->
+  <script src="https://wujiyan.cc/ads.js"></script>
 </body>
 </html>
